--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,20 @@
 version: '3'
 services:
   web:
+    container_name: "web"
     build:
-        context: ./php56
-        dockerfile: Dockerfile
+        context: "./php56"
+        dockerfile: "Dockerfile"
     ports:
         - "8080:80"
     links:
-        - db
+        - "db:db"
   db:
     #dockerfileなくてもpullするだけだったら下記のコメントでもOK
     #image: "mysql:latest"
+    container_name: "db"
     build:
-        context: ./mysql
-        dockerfile: Dockerfile
+        context: "./mysql"
+        dockerfile: "Dockerfile"
     environment:
-        MYSQL_ROOT_PASSWORD: root
+        MYSQL_ROOT_PASSWORD: "root"
