--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
         - "8080:80"
     volumes:
-        - ~/docker_dev/sampleapp:/var/www/html
+        - ./php56/:/var/www/html
     links:
         - "db:db"
   db:
