--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
         - "8080:80"
     volumes:
-        - ./php56/:/var/www/html
+        - ./public_html/:/var/www/html
     links:
         - "db:db"
   db:
@@ -18,5 +18,10 @@ services:
     build:
         context: "./mysql"
         dockerfile: "Dockerfile"
+    volumes:
+        # 初期データを投入するSQLが格納されているdir
+        - ./mysql/mysql_init:/docker-entrypoint-initdb.d
+        # 永続化するときにマウントするdir
+        - ./mysql/mysql_data:/var/lib/mysql
     environment:
         MYSQL_ROOT_PASSWORD: "root"
