--- a/docker-compose-php56.yml
+++ b/docker-compose-php56.yml
@@ -18,10 +18,10 @@ services:
     build:
         context: "./mysql"
         dockerfile: "Dockerfile"
-    volumes:
-        # 初期データを投入するSQLが格納されているdir
-        - ./mysql/mysql_init:/docker-entrypoint-initdb.d
-        # 永続化するときにマウントするdir
-        - ./mysql/mysql_data:/var/lib/mysql
+#    volumes:
+#        # 初期データを投入するSQLが格納されているdir
+#        - ./mysql/mysql_init:/docker-entrypoint-initdb.d
+#        # 永続化するときにマウントするdir
+#        - ./mysql/mysql_data:/var/lib/mysql
     environment:
         MYSQL_ROOT_PASSWORD: "root"
