--- a/docker-compose-php56.yml
+++ b/docker-compose-php56.yml
@@ -8,7 +8,7 @@ services:
     ports:
         - "8080:80"
     volumes:
-        - ./public_html/:/var/www/html
+        - ./public_html/project1:/var/www/html
     links:
         - "db:db"
   db:
