--- a/docker-compose-php72.yml
+++ b/docker-compose-php72.yml
@@ -3,7 +3,7 @@ services:
   web:
     container_name: "php72"
     build:
-        context: "./php72"
+        context: "./basic_centos7"
         dockerfile: "Dockerfile"
     ports:
         - "8080:80"
@@ -18,10 +18,12 @@ services:
     build:
         context: "./mysql"
         dockerfile: "Dockerfile"
-#    volumes:
-#        # 初期データを投入するSQLが格納されているdir
-#        - ./mysql/mysql_init:/docker-entrypoint-initdb.d
-#        # 永続化するときにマウントするdir
-#        - ./mysql/mysql_data:/var/lib/mysql
     environment:
-        MYSQL_ROOT_PASSWORD: "root"
+      MYSQL_DATABASE: sample_db
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
+      MYSQL_ROOT_PASSWORD: root
+
+    volumes:
+        # 初期データを投入するSQLが格納されているdir
+        - ./mysql/init/:/docker-entrypoint-initdb.d/
