--- a/basic_centos7/Dockerfile
+++ b/basic_centos7/Dockerfile
@@ -12,10 +12,12 @@ RUN yum -y install http://rpms.famillecollet.com/enterprise/remi-release-7.rpm
 #php&node
 RUN yum -y install --enablerepo=remi-php72  php php-devel php-mbstring php-pdo php-gd php-xml php-mcrypt
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/bin && mv /usr/bin/composer.phar /usr/bin/composer
-RUN yum -y install httpd
+
 
 RUN curl -sL https://rpm.nodesource.com/setup_11.x | bash -
 RUN yum install -y nodejs
 RUN npm install npm@latest -g
 
+RUN yum -y install httpd
+CMD service httpd start
 EXPOSE 80
