--- a/basic_centos7/Dockerfile
+++ b/basic_centos7/Dockerfile
@@ -10,7 +10,7 @@ RUN yum -y install epel-release
 RUN yum -y install http://rpms.famillecollet.com/enterprise/remi-release-7.rpm
 
 #php&node
-RUN yum -y install --enablerepo=remi-php72  php php-devel php-mbstring php-pdo php-gd php-xml php-mcrypt
+RUN yum -y install --enablerepo=remi-php72  php php-devel php-mbstring php-pdo php-gd php-xml php-mcrypt php-mysql
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/bin && mv /usr/bin/composer.phar /usr/bin/composer
 
 
