--- a/docker-compose-php72.yml
+++ b/docker-compose-php72.yml
@@ -28,5 +28,7 @@ services:
       MYSQL_ROOT_PASSWORD: root
 
     volumes:
+        # 永続化することでコンテナ削除してもOK
+        - "./mysql/data:/var/lib/mysql"
         # 初期データを投入するSQLが格納されているdir
         - ./mysql/init/:/docker-entrypoint-initdb.d/
